<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goToMenuButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:text=""
        android:background="@drawable/go_back_button_selector"
        app:layout_constraintStart_toStartOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="@+id/balanceInfo" />

    <TextView
        android:id="@+id/balanceInfo"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:text="@string/balance_count"
        android:gravity="center"
        android:fontFamily="@font/brawler"
        android:textStyle="bold"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/info_border" />

    <TextView
        android:id="@+id/betInfo"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/info_border"
        android:fontFamily="@font/brawler"
        android:gravity="center"
        android:text="@string/bet_count"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/autoSpinInfo"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/autospin_text"
        android:gravity="center"
        android:fontFamily="@font/brawler"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinButton"
        android:background="@drawable/info_border" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/betInfo"
        app:layout_constraintTop_toTopOf="@+id/betInfo"
        android:background="@drawable/plus_button_ripple" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/betInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/betInfo"
        android:background="@drawable/minus_button_ripple" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startAutoSpinButton"
        android:layout_width="79dp"
        android:layout_height="52dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/spinButton"
        app:layout_constraintEnd_toStartOf="@+id/spinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinButton"
        android:background="@drawable/auto_spin_button_selector" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopAutoSpinButton"
        android:layout_width="79dp"
        android:layout_height="52dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/spinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinButton"
        app:layout_constraintTop_toTopOf="@+id/spinButton"
        android:background="@drawable/stop_button_selector" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/spinButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betInfo"
        android:background="@drawable/spin_button_ripple" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="280dp"
        android:layout_height="283dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceInfo"
        app:srcCompat="@drawable/slot_machine" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <ImageView
            android:id="@+id/slotMachine1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/slots_element_1" />

        <ImageView
            android:id="@+id/slotMachine2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="18dp"
            app:srcCompat="@drawable/slots_element_1" />

        <ImageView
            android:id="@+id/slotMachine3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/slots_element_1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>